--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           distribution: "temurin"
           java-version: "17"
-      #
+      #Uncomment for M2 and forth
       #- name: Test and analyze
       #  run: ./gradlew test jacocoTestReport sonar
       #  env:
